--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="@dimen/activity_horizontal_margin">
     
     <TextView
     android:id="@+id/stationName"
-    android:layout_width="fill_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
+        android:layout_weight="3"
     android:paddingBottom="2dip"
     android:paddingTop="6dip"
     android:textColor="@color/colorPrimaryDark"
@@ -17,14 +18,17 @@
     
     <TextView
     android:id="@+id/stationShortCode"
-    android:layout_width="fill_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+
     android:layout_height="wrap_content"
     android:paddingBottom="2dip"
     android:textColor="@color/colorAccent" />
     
     <TextView
     android:id="@+id/stationUICCode"
-    android:layout_width="wrap_content"
+    android:layout_width="0dp"
+        android:layout_weight="1"
     android:layout_height="wrap_content"
     android:textColor="#5d5d5d"
     android:textStyle="bold" />
